# rust-solar

./: .gitignore  Cargo.toml  README.md  build.rs  solar_data.sql
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: devskim.yml  grcov.yml
assets/tracer/: tracer.ino
src/: database.rs  datapoint.rs  load_toggle_switch.rs  main.rs  serial_data_logger.rs
supply-chain/: audits.toml  config.toml
